--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "onepagemd-template-version": 0.2,
-    "main-title": "[INSIDE]",
+    "main-title": null,
     "title": "Onepage Portfolio - by Diara Goi",
     "version": "vX.X",
     "author": "Diara Goi",
@@ -53,7 +53,7 @@
     },
     "style": {
         "basic-style": "default_kanff",
-        "font-list": "Jetbrains Mono, Consolas, sans-serif",
+        "font-list": "Open Sans, Consolas, sans-serif",
         "font-size": "1em",
         "body": {
             "maxwidth": "1300px",
