--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "One page website template, with responsive display, content in Markdown, additionnals PHP generated values, translations, design configs, ...",
   "main": "index.php",
   "scripts": {
-    "buildcss": "tailwind build tailwind.css -c tailwind.config.js -o dist/node_modules/tailwindcss/dist/tailwind.css",
+    "buildcss": "tailwind build tailwind.css -c tailwind.config.js -o dist/node_modules/tailwindcss/dist/tailwind.min.css",
     "build": "build.bat"
   },
   "repository": {
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/KanFF/onepageMD#readme",
   "dependencies": {
-    "@tailwindcss/typography": "^0.4.0",
     "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
