--- a/config.json
+++ b/config.json
@@ -3,7 +3,8 @@
     "main-title": null,
     "title": "KanFF",
     "website-name": "kanff.org",
-    "version": "vX.X",
+    "version": "v1.0",
+    "versiondate": "26.04.2021",
     "author": "KanFF Team",
     "email": null,
     "link": "github.com/samuelroland/KanFF",
